--- a/Client/src/app/_components/members/member-card/member-card.component.css
+++ b/Client/src/app/_components/members/member-card/member-card.component.css
@@ -38,3 +38,13 @@
 .animate {
     transition: all 0.3s ease-in-out;
 }
+
+@keyframes fa-blink {
+    0% { opacity: 1; }
+    100% { opacity: 0.4; }
+}
+
+.is-online {
+    animation: fa-blink 1.5s linear infinite;
+    color: rgb(65,215,167);
+}
