--- a/Client/src/app/_components/members/member-card/member-card.component.html
+++ b/Client/src/app/_components/members/member-card/member-card.component.html
@@ -2,13 +2,15 @@
     <div class="card-img-wrapper">
         <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
-            <li class="list-inline-item"><button class="btn btn-primary btn-sm" routerLink='/member/{{member.userName}}' routerLinkActive="router-link-active"><i class="fa fa-user"></i></button></li>
-            <li class="list-inline-item"><button class="btn btn-primary btn-sm" (click)="addLike(member)"><i class="fa fa-heart"></i></button></li>
+            <li class="list-inline-item"><button class="btn btn-primary btn-sm" routerLink='/member/{{member.userName}}'
+                        routerLinkActive="router-link-active"><i class="fa fa-user"></i></button></li>
+            <li class="list-inline-item"><button class="btn btn-primary btn-sm" (click)="addLike(member)"><i
+                       class="fa fa-heart"></i></button></li>
             <li class="list-inline-item">
-                <button 
-                    class="btn btn-primary btn-sm" 
-                    routerLink="/member/{{member.userName}}" 
-                    [queryParams]="{tab: 3}">
+                <button
+                        class="btn btn-primary btn-sm"
+                        routerLink="/member/{{member.userName}}"
+                        [queryParams]="{tab: 3}">
                     <i class="fa fa-envelope"></i>
                 </button>
             </li>
@@ -16,7 +18,10 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
-            <i class="fa fa-user mr-2"></i> {{member.knownAs}}, {{member.age}}
+            <span [class.is-online]="(presenceService.onlineUsers$ | async).includes(member.userName)">
+                <i class="fa fa-user mr-2"></i>
+            </span>
+            {{member.knownAs}}, {{member.age}}
         </h6>
         <p class="card-text text-muted text-center">
             {{member.city}}
